--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <section class="sobre" id="sobre">
             <div class="paisobre">
-                <div class="imagem reveal"><img src="/imagens/darth vader.jpg" alt=""></div>
+                <div class="imagem reveal"><img src="imagens/darth vader.jpg" alt=""></div>
                 <div class="texto1 reveal">
                     <h2>Sobre Mim</h2>
                     <h4>Desenvolvedor Web</h4>
@@ -67,22 +67,22 @@
 
             <div class="carousel reveal">
                 <div class="carousel-track">
-                    <div class="cards"><img src="/imagens/html.svg" alt="html">
+                    <div class="cards"><img src="imagens/html.svg" alt="html">
                         <p>HTML</p>
                     </div>
-                    <div class="cards"><img src="/imagens/css.svg" alt="css">
+                    <div class="cards"><img src="imagens/css.svg" alt="css">
                         <p>CSS 3</p>
                     </div>
-                    <div class="cards"><img src="/imagens/javascript.svg" alt="javascript">
+                    <div class="cards"><img src="imagens/javascript.svg" alt="javascript">
                         <p>JAVASCRIPT</p>
                     </div>
-                    <div class="cards"><img src="/imagens/wordpress.svg" alt="wordpress">
+                    <div class="cards"><img src="imagens/wordpress.svg" alt="wordpress">
                         <p>WORDPRESS</p>
                     </div>
-                    <div class="cards"><img src="/imagens/php.svg" alt="php">
+                    <div class="cards"><img src="imagens/php.svg" alt="php">
                         <p>PHP</p>
                     </div>
-                    <div class="cards"><img src="/imagens/react.svg" alt="react">
+                    <div class="cards"><img src="imagens/react.svg" alt="react">
                         <p>REACT</p>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     </form>
                 </div>
 
-                <div class="contato2 reveal"><img src="/imagens/batman.jpg" alt=""></div>
+                <div class="contato2 reveal"><img src="imagens/batman.jpg" alt=""></div>
             </div>
         </section>
     </main>
@@ -128,3 +128,4 @@
 </body>
 
 </html>
+
